# scheduled-tasks

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: chinese-with-identifiers.mdc  code-reviewer-quota-fallback.mdc  db-beginner-doc-sync.mdc  docs-sync-with-code.mdc  etf-official-lock-fields.mdc  etf-pool-index-lifecycle.mdc  naming-matches-reality.mdc
.github/actions/check-ashare-trading-day/: action.yml
.github/workflows/: apply-cockpit-migration.yml  manual-enrich-akshare.yml  sync-etf-kline.yml  sync-fx-rates.yml  sync-index-valuation.yml  sync-indices.yml  sync-official-cross-check.yml
doc/: ashare-trading-day-gate.md  future-stock-view-integration.md  hermes-domestic-cron.md  hongsehuojian-fill-validate.md  official-cross-check-design.md  official-cross-check.md  spike-baostock-akshare.md  spike-baostock-akshare.raw.json  spike-official-sse-csindex.md  supabase-schema.md  supabase-verification.md
doc/sql/: accept_etf_amount_coverage.sql
docs/superpowers/plans/: 2026-07-22-holiday-bark-silent.md
docs/superpowers/specs/: 2026-07-21-drop-fx-add-index-valuation-gha.md  2026-07-22-holiday-bark-silent.md
rules/: etf-rename-compat-review.md
scripts/: spike_baostock_akshare.py
src/scheduled_tasks/: __init__.py  config.py  db.py  tushare_client.py
src/scheduled_tasks/etf/: __init__.py  akshare_client.py  baostock_client.py  csindex_client.py  hongsehuojian_client.py  sse_client.py  yfinance_client.py
src/scheduled_tasks/fx/: __init__.py  frankfurter_client.py
src/scheduled_tasks/indices/: __init__.py  daily.py  date_utils.py  industry.py  types.py  valuation.py
tests/: test_ashare_trading_day.py  test_config.py  test_db.py  test_etf_baostock.py  test_etf_enrich_akshare.py  test_etf_yfinance.py  test_fx_frankfurter.py  test_hongsehuojian.py  test_index_valuation_rename.py  test_official_cross_check.py  test_trade_calendar_job.py  test_tushare_client.py
tests/integration/: test_enrichment_writers_postgres.py
(+44 files in other folders)
