[project]
name = "scheduled-tasks"
version = "0.1.0"
description = "GitHub Actions scheduled jobs for syncing ETF daily bars into Supabase."
requires-python = ">=3.11"
dependencies = [
  "baostock>=0.8.8",
  "pandas>=2.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
