[project]
name = "scheduled-tasks"
version = "0.1.0"
description = "GitHub Actions jobs: ETF daily bars (yfinance) and FX rates (Frankfurter) into Supabase; cockpit ledger DDL/RLS."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
